--- a/.classpath
+++ b/.classpath
@@ -24,7 +24,9 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-io-2.3.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwtupload-1.0.3.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-html5-storage.jar"/>
-	<classpathentry kind="lib" path="C:/work/finallib/gxt-3.1.0-beta.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/gxt-3.1.0-beta.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/log4j-gwt.jar"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER/GWT"/>
+	<classpathentry kind="con" path="com.gwtplugins.gwt.eclipse.core.GWT_CONTAINER/gwt-2.7.0"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
