edit user done delete remaining

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -4,7 +4,7 @@
 # Define the root logger with appender file
 
 
-log4j.rootLogger=ALL, RollingAppender, file, stdout
+log4j.rootLogger=INFO, RollingAppender, file, stdout
 log4j.appender.RollingAppender=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.RollingAppender.File=/log/sample.log
 log4j.appender.RollingAppender.DatePattern='.'yyyy-MM-dd
