--- a/.classpath
+++ b/.classpath
@@ -46,5 +46,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt27_2.7.0.201710131939/gwt-2.7.0/validation-api-1.0.0.GA-sources.jar"/>
 	<classpathentry kind="lib" path="D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt27_2.7.0.201710131939/gwt-2.7.0/validation-api-1.0.0.GA.jar" sourcepath="D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt27_2.7.0.201710131939/gwt-2.7.0/validation-api-1.0.0.GA-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Joni/Downloads/itextpdf-5.4.0.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
