08-06-20 StrategicSubProcess->Multiple Sub Process selecteion, not yet set in kickoffview to display front end

--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry kind="src" output="test-classes" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/cglib-2.2.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-collections-3.1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/ejb3-persistence.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/hibernate3.jar"/>
@@ -28,24 +27,26 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gxt-theme-neptune-3.1.0.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gxt-3.1.1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gxt-chart-3.0.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/itextpdf-5.4.0.jar"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER/GWT"/>
-	<classpathentry kind="lib" path="D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt27_2.7.0.201710131939/gwt-2.7.0/gwt-user.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt27_2.7.0.201710131939/gwt-2.7.0/doc/javadoc/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt27_2.7.0.201710131939/gwt-2.7.0/gwt-codeserver.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt27_2.7.0.201710131939/gwt-2.7.0/doc/javadoc/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt27_2.7.0.201710131939/gwt-2.7.0/gwt-dev.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt27_2.7.0.201710131939/gwt-2.7.0/doc/javadoc/"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt27_2.7.0.201710131939/gwt-2.7.0/validation-api-1.0.0.GA-sources.jar"/>
 	<classpathentry kind="lib" path="D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt27_2.7.0.201710131939/gwt-2.7.0/validation-api-1.0.0.GA.jar" sourcepath="D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt27_2.7.0.201710131939/gwt-2.7.0/validation-api-1.0.0.GA-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Joni/Downloads/itextpdf-5.4.0.jar"/>
+	<classpathentry kind="lib" path="D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt28_2.8.0.201710131939/gwt-2.8.1/gwt-user.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt28_2.8.0.201710131939/gwt-2.8.1/doc/javadoc/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt28_2.8.0.201710131939/gwt-2.8.1/gwt-codeserver.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt28_2.8.0.201710131939/gwt-2.8.1/doc/javadoc/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt28_2.8.0.201710131939/gwt-2.8.1/gwt-dev.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt28_2.8.0.201710131939/gwt-2.8.1/doc/javadoc/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt28_2.8.0.201710131939/gwt-2.8.1/validation-api-1.0.0.GA-sources.jar"/>
+	<classpathentry kind="lib" path="D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt28_2.8.0.201710131939/gwt-2.8.1/validation-api-1.0.0.GA.jar" sourcepath="D:/softwares/eclipse-jee-neon-3-win32/eclipse/plugins/com.gwtplugins.gwt.eclipse.sdkbundle.gwt28_2.8.0.201710131939/gwt-2.8.1/validation-api-1.0.0.GA-sources.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
